--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,7 @@
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://kit.fontawesome.com/4d8bf3b3d9.js" crossorigin="anonymous"></script>
 </body>
 </html>
